--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -59,7 +59,7 @@
   "notDefined": "Non déterminé",
   "confirmAction": "Confirmer la demande ?",
   "requestError": "Erreur durant le traitement de la requête",
-  "status": "statut",
+  "status": "Statut",
   "lastUpdate": "Dernière Mise à jour",
   "day": "Jour",
   "week": "Semaine",
