Fix: Corriger la consultation des rapports

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -87,6 +87,12 @@
     "DOWNLOAD": "Télécharger",
     "MODIFY": "Modifier"
   },
+  "frequencies": {
+    "ONCE": "Une seule fois",
+    "DAILY": "Journalier",
+    "WEEKLY": "Hebdomadaire",
+    "MONTHLY": "Mensuel"
+  },
   "home": {
     "customize": {
       "title": "Ajouter/Supprimer des widgets"
