feat: Panel pour le changement de mot de passe

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -604,6 +604,10 @@
       "userForm": {
         "title": "Ajouter un utilisateur",
         "modify-title": "Modification d'un utilisateur"
+      },
+      "changePassword": {
+        "title": "Modifier le mot de passe",
+        "warning": "Les modifications seront perdues, voulez-vous continuer ?"
       }
     }
   },
