fix:  rendu dans le composant de recherche unitaire
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/-/issues/1678

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1380,8 +1380,8 @@
       }
     },
     "search": {
-      "act-mass-id": "Id de l’acte de gestion en masse",
-      "act-unit-id": "Id de l’acte de gestion unitaire"
+      "act-mass-id": "Id acte masse",
+      "act-unit-id": "Id acte unitaire"
     }
   },
   "col": {
