fix: modification de l'affichage pour le type de partenaire MVNO

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -790,10 +790,10 @@
       "offer": "Offre",
       "lineStatus": "Statut de la ligne",
       "triggeredAlarms": "Alarmes déclenchées",
-      "manufacturer": "Fabricant",
+      "manufacturer": "Fabriquant",
       "model": "Modèle",
       "titled": "Intitulés",
-      "data": "Data consommées",
+      "data": "Data consommée",
       "sms": "SMS consommés",
       "voice": "Voix consommée",
       "previsionalData": "Prévisionnel Data",
@@ -1516,7 +1516,7 @@
       "billingStatus": "Statut de facturation",
       "networkStatus": "Statut réseau",
       "importDate": "Date d’import",
-      "endCommitmentDate": "Date de fin d’engagement",
+      "endCommitmentDate": "Date de fin de forfait",
       "activationDate": "Date d’activation",
       "preActivationDate": "Date de pré-activation",
       "statusDate": "Date de statut",
