feat:  libellé différent pour la date du rapport suivant la fréquence de génération
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/-/issues/1378

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -632,6 +632,7 @@
       "fileFormat": "Format de ficher",
       "list": "Liste de diffusion",
       "dateGenerated": "Date de génération",
+      "dateForOneItem": "Date de la demande",
       "dateAndRecursion": "Récurrence et date"
     },
     "errors": {
