FEAT: Ajout de l'export complet de toutes les colonnes

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -23,6 +23,7 @@
   "delete": "Supprimer",
   "modify": "Modifier",
   "export": "Exporter",
+  "exportAll": "Export complet",
   "exportError": "Impossible d'exporter",
   "logout": "Déconnexion",
   "required": "Champ obligatoire",
