--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -519,6 +519,7 @@
       "salesEngineer": "Ingénieur commercial",
       "lastBill": "Dernière facture (cumul)",
       "customize": "Personnalisation",
+      "customerList": "Liste des clients (C.F)",
       "offersAndSim": "Offres et cartes SIM",
       "accountDetail": "Détail du compte",
       "admins": "Administrateurs",
@@ -547,6 +548,44 @@
       }
     },
     "partnerDetail": {
+      "mb": {
+        "code": "N° du compte de facturation",
+        "name": "Libellé de l’établissement",
+        "marketLine": "Ligne de marché",
+        "siret": "N° siret",
+        "status": "Statut",
+        "commercialOffer": "Offres commerciales",
+        "offerAndProduct": "Offres et produits",
+        "customerDescription": "Description du compte client",
+        "clientContactDescription": "Description du contact client",
+        "deliveryAdresses": "Adresses de livraison",
+        "paymentMethod": "Mode de paiement",
+
+        "commercialOffers": {
+          "create": "Créer une offre commerciale",
+          "code": "Code de l'offre commerciale",
+          "name": "Nom de l'offre commerciale",
+          "cfCode": "Code C.F.",
+          "edited": "Modifiée le",
+          "catalogOffer": "Offre catalogue",
+          "rateplan": "Rateplan associé",
+          "york": "Communauté york",
+          "usage": "Usage",
+          "enveloppeLabel": "Libellé enveloppe",
+          "enveloppe": "Enveloppe",
+          "price": "Prix",
+          "discount": "Remise",
+          "notDefined": "Non défini",
+          "duration": "Durée d'engagement",
+          "suspensionPeriod": "Période de suspension offerte",
+          "subscriptionDiscount": "Remise abonnement (%)",
+          "franceVoiceDiscount": "Remise conso voix France (%)",
+          "franceSMSDiscount": "Remise conso SMS France (%)",
+          "franceDataDiscount": "Remise conso data France (%)",
+          "europeVoiceDiscount": "Remise conso voix Europe rég. (%)",
+          "europeSMSDiscount": "Remise conso SMS Europe rég. (%)"
+        }
+      },
       "generalInformations": "Informations générales",
       "legalInformations": "Informations légales",
       "backToCF": "Retour à la liste des C.F.",
