Fix: correction et amélioration de l'historique des actes de gestion

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -890,7 +890,7 @@
         }
       },
       "consummated": {
-        "data": "Data consommées",
+        "data": "Data consommée",
         "sms": "SMS consommés",
         "voice": "Voix consommée",
         "export": "Exporter l'encours de consommation",
