feat: ajout du filtre Type de cartes SIM pour la gestion des partenaires

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -484,7 +484,8 @@
         "partnerGroup": "Groupe de partenaire",
         "partners": "Partenaires",
         "roles": "Rôles",
-        "status": "Statut"
+        "status": "Statut",
+        "typeSIMCard": "Type de carte SIM"
       },
       "total": "{total} utilisateur(s) trouvé(s)",
       "errors": {
