feat:  Consulter le dernier coach d'une ligne

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -851,6 +851,16 @@
       "consuming": "EN COURS DE CONSOMMATION",
       "consumingFromMonthBeginning": "En cours de la ligne depuis le début du mois",
       "analysingTool": "GETDIAG / OUTILS D'ANALYSE",
+      "testData": "Test data",
+      "networkTest": "Test du réseau",
+      "ipAssign": "Attribution adresse IP",
+      "localityTest": "Analyse de la localité",
+      "cellAnalysis": "Analise de la cellule",
+      "networkDetectionTest": "Test accroche réseau",
+      "lastUsageAnalysis": "Analyse du dernier usage",
+      "noCoach": "Pas de coach sur cette ligne",
+      "standardTest": "Tests standards",
+      "advancedTest": "Tests avancés",
       "specificFields": {
         "title": "Champs spécifiques",
         "label1": "Champ spécifique 1",
