feat: Afficher les alarmes dans la page de supervision

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -390,6 +390,7 @@
     "allUsages": "Usage data,SMS,Voix",
     "dataUsage": "Usage data",
     "m2mCockpit": "Cockpit M2M",
+    "alarms": "Alarmes",
     "exportGraph": "Exporter les données des graphes",
 
     "supervisionTypes": {
