--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -794,7 +794,8 @@
         "creator": "Demandeur",
         "creatorMail": "Email du demandeur",
         "EXPORT_ACT": "Exporter l'acte",
-        "EXPORT_LINES": "Exporter {total} lignes",
+        "EXPORT_LINES": "Exporter {total} lignes:",
+        "EXPORT_ACTS": "Exporter {total} actes:",
         "RESULT": "Voir le résultat de l'acte",
         "newStatus": "Nouveau statut",
         "changeCf": "Nouveau C.F",
