FEAT: Ajout screen error/loading sur modal export

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -25,7 +25,8 @@
   "modify": "Modifier",
   "export": "Exporter",
   "exportAll": "Export complet",
-  "exportError": "Impossible d'exporter",
+  "exportError": "La génération du fichier a rencontré un problème. Veuillez réessayer.",
+  "exportLoading": "Votre fichier est en cours de préparation",
   "logout": "Déconnexion",
   "required": "Champ obligatoire",
   "optional": "Champ facultatif",
