FEAT: Gestion du MVNO et M2M sur la section de facturation dans le detail de ligne

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -969,6 +969,7 @@
           "descriptionTimeForSuspendedOffer": "Il vous reste {total} jours de suspension offerte  jusqu'au {date}",
           "offerName": "Nom de l'offre",
           "endCommitmentDate": "Date de fin d'engagement",
+          "endForfaitDate": "Date de fin de forfait",
           "billingStatus": "Statut de facturation"
         },
         "lineServices": "Services de la ligne",
