fix: mise à jour des informations des factures

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -250,7 +250,8 @@
     "billDetail": "Détail de facturation",
     "billPeriod": "Période facturée",
     "lineTotal": "Nombre de lignes",
-    "download": "Télécharger la facture"
+    "download": "Télécharger la facture",
+    "usageVolume": "Volume d'usage"
   },
   "coach": {
     "title": "Coach",
