fix: 1860 amélioration du gestionnaire d'erreur pour l'acte de résiliation

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -26,7 +26,9 @@
   "export": "Exporter",
   "exportAll": "Export complet",
   "exportError": "La génération du fichier a rencontré un problème. Veuillez réessayer.",
+  "retry": "Veuillez réessayer",
   "exportLoading": "Votre fichier est en cours de préparation",
+  "exportFormat": "Veuillez choisir un format d'export",
   "logout": "Déconnexion",
   "required": "Champ obligatoire",
   "optional": "Champ facultatif",
@@ -810,7 +812,7 @@
         "creator": "Demandeur",
         "creatorMail": "Email du demandeur",
         "EXPORT_ACT": "Exporter l'acte",
-        "EXPORT_LINES": "Exporter {total} lignes:",
+        "EXPORT_LINES": "Exporter {total} lignes",
         "EXPORT_ACTS": "Exporter {total} actes",
         "RESULT": "Voir le résultat de l'acte",
         "MORE_DETAIL": "Voir le détail du résultat",
