fix: liste des cartes SIM d'un CF
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/-/issues/1814

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -584,7 +584,7 @@
         "siret": "N° siret",
         "status": "Statut",
         "commercialOffer": "Offres commerciales",
-        "offerAndProduct": "Offres et produits",
+        "simCards": "Cartes SIM",
         "customerDescription": "Description du compte client",
         "clientContactDescription": "Description du contact client",
         "deliveryAdresses": "Adresses de livraison",
@@ -659,6 +659,10 @@
       "ELEVEN": "11",
       "FIFTEEN": "15",
       "BOTH": "Tous",
+      "simcards": {
+        "search": "Rechercher une carte",
+        "searchPlaceholder": "veuillez saisir un nom"
+      },
       "adminForm": {
         "titles": {
           "addMainAdmin": "Ajouter un administrateur principal",
