fix: cacher les services pour les utilisateurs MVNO

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -457,7 +457,7 @@
     "alarm": {
       "triggered_x_month": "Déclenchements dans les {month} derniers mois",
       "triggered_lines": "Lignes ciblées par l'alarme",
-      "excluded_sim_from_alarms": "Cartes sim exclues de l'alarme",
+      "excluded_sim_from_alarms": "Lignes exclues",
       "trigger_reason": "Motifs de déclenchement",
       "trigger_date": "Date de dernier déclenchement",
       "disable_alarm_lines": "Désactiver l'alarme des lignes",
