fix: 1855 export des colonnes pour la table de supervision

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1078,6 +1078,7 @@
           "sms": "Consommation SMS",
           "voice": "Consommation voix",
           "smsTable": {},
+          "mapView": "Vue carte",
           "dataConsumptionPerDayColumns": {
             "start": "Début de conso",
             "end": "Fin de conso.",
