fix: 1897 traduction du statut Terminé pour l'acte de gestion

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -1407,7 +1407,8 @@
           "TEST": "Test",
           "NOT_PREACTIVATED": "Non préactivée",
           "PREACTIVATED": "Préactivée",
-          "ACTIVATED": "Activée"
+          "ACTIVATED": "Activée",
+          "TERMINATED": "Terminé"
         }
       },
       "alarmList": {
