fix: graphe des limites dans la création d'alarmes mutualisées
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/-/issues/1868

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -738,6 +738,7 @@
     "search-lines-by-id": "Rechercher une ligne par ID",
     "tooltip-title-text": "Vous pouvez retrouver l'ensemble des lignes du parc, leur état ainsi que les outils de diagnostics des lignes. Vous pouvez également gérer les lignes, modifier les services et les offres, exporter les informations et données d'usage.",
     "actTypes": {
+      "COACH_M2M": "Coach M2M",
       "PREACTIVATION": "Pré-activation",
       "PREACTIVATION_ACTIVATION": "Pré-activation et Activation",
       "ACTIVATION": "Activation",
