--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -16,6 +16,10 @@
   "unSelectAll": "Tout désélectionner",
   "showOrHideColumns": "Ajouter / Masquer des colonnes",
   "save": "Enregistrer",
+  "saveFilter": "Enregistrer un filtre",
+  "applyFilter": "Appliquer un filtre",
+  "applyTheFilter": "Appliquer le filtre",
+  "newFilterName": "Nom du nouveau filtre",
   "cancel": "Annuler",
   "reset": "Réinitialiser",
   "resetFilters": "Réinitialiser le filtre",
@@ -37,6 +41,7 @@
   "list": "Liste",
   "date": "Date",
   "none": "Aucune",
+  "noneM": "Aucun",
   "type": "Type",
   "action": "Action",
   "ordersFound": "{total} commande(s) trouvée(s)",
@@ -536,6 +541,7 @@
       "addUser": "Ajouter un utilisateur",
       "title": "Gestion des utilisateurs",
       "noInfo": "Non renseigné",
+      "searchPlaceholder": "Saisir un nom, prénom ou login",
       "filters": {
         "fullName": "Nom ou prénom",
         "email": "Email",
@@ -708,7 +714,14 @@
         }
       },
       "offerFromPanel": {
-        "title": "Panel Offre"
+        "title": "Panel Offre",
+        "availableOffers": "Offres disponibles pour cette entité",
+        "offerSearch": "Rechercher une Offre",
+        "searchInput": "Saisir un nom ou un code",
+        "offerManagement": "Gérer les offres associées",
+        "defaultServices": "Services activés par défaut",
+        "default": "Activés par défaut",
+        "modifiedServices": "Services modifiables"
       },
       "userForm": {
         "title": "Ajouter un utilisateur",
