fix: traduction de la partie alarmes

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -98,6 +98,10 @@
   "applyFilters": "Appliquer / Rafraichir",
   "chooseOnePartner": "Veuillez choisir un partenaire",
   "days": "Jours",
+  "map": {
+    "world": "Monde",
+    "countryFR": "France"
+  },
   "actions": {
     "DUPLICATE": "Dupliquer",
     "DISABLE": "Désactiver",
